Move the comment image to match mouse pointer

--- a/public/drawio/styles/viewer.css
+++ b/public/drawio/styles/viewer.css
@@ -36,5 +36,5 @@
 }
 
 .comment-active {
-  cursor: url('/drawio/images/comment.svg'), auto;
+  cursor: url('/drawio/images/comment.svg') 20 20, auto;
 }
